--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <p>merge branches</p>
-    <p>this is an example on how to merge branches</p>
+    <p>example on how to merge branches</p>
     
 </body>
 </html>
