--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <body>
     <p>merge branches</p>
     <p>example on how to merge branches</p>
+    hi thi is ansh and in this code i shall learn how to create a new branch
     
 </body>
 </html>
