will also learn how to merge my own branch wiht the main branch

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <p>merge branches</p>
     <p>example on how to merge branches</p>
     hi thi is ansh and in this code i shall learn how to create a new branch
+    will also learn how to merge my own branch wiht the main branch
     
 </body>
 </html>
