add a linkon html

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <p>example on how to merge branches</p>
     hi thi is ansh and in this code i shall learn how to create a new branch
     will also learn how to merge my own branch wiht the main branch
+    <a href="https://www.w3schools.com/html/">to learn more about html</a>
     
 </body>
 </html>
