--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
     hi thi is ansh and in this code i shall learn how to create a new branch
     will also learn how to merge my own branch wiht the main branch
     <a href="https://www.w3schools.com/html/">to learn more about html</a>
-    
+    shall mostly be working on programming languages     
 </body>
 </html>
