--- a/index.html
+++ b/index.html
@@ -12,5 +12,6 @@
     will also learn how to merge my own branch wiht the main branch
     <a href="https://www.w3schools.com/html/">to learn more about html</a>
     shall mostly be working on programming languages     
+    <a href="https://github.com/Patel-anshj1022">get to know me on github</a>
 </body>
 </html>
