--- a/index.html
+++ b/index.html
@@ -13,5 +13,6 @@
     <a href="https://www.w3schools.com/html/">to learn more about html</a>
     shall mostly be working on programming languages     
     <a href="https://github.com/Patel-anshj1022">get to know me on github</a>
+    i live in nakuru,kenya
 </body>
 </html>
