what i like the most

--- a/index.html
+++ b/index.html
@@ -14,5 +14,6 @@
     shall mostly be working on programming languages     
     <a href="https://github.com/Patel-anshj1022">get to know me on github</a>
     i live in nakuru,kenya
+    mostly like travelling and listening to music
 </body>
 </html>
