--- a/index.html
+++ b/index.html
@@ -15,5 +15,6 @@
     <a href="https://github.com/Patel-anshj1022">get to know me on github</a>
     i live in nakuru,kenya
     mostly like travelling and listening to music
+    my hobby is swimming
 </body>
 </html>
