keeping on steady on my path towards success in programming.

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>Project</title>
 </head>
 <body>
+    keeping on steady on my path towards success in programming.
+    Every day am a student learning things here and there.
     
 </body>
 </html>
